add timeout between each calculation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # YEN or MPS, or NAIVE
-algorithm=MPS
+algorithm=YEN
 # generate topology with no transit
 topology.no_transit=true
 # how much gateways
@@ -17,6 +17,8 @@ benchmarks.repeated.count=10
 # count of first shortest paths
 topology.paths.per_pair.count=2
 # pause before next series of measurements with another topology size
-benchmarks.timeout.ms=7000
+benchmarks.series.timeout.ms=7000
+# pause between each calculation
+benchmarks.calc.timeout.ms=3000
 # csv file, where result will be appended
 benchmarks.report.path=report.csv
