--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # YEN or MPS, or NAIVE
-algorithm=YEN
+algorithm=MPS
 # generate topology with no transit
 topology.no_transit=true
 # how much gateways
