fix bugs, add logs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 # YEN or MPS, or NAIVE
-algorithm=MPS
+algorithm=YEN
 # generate topology with no transit
 topology.no_transit=true
 # how much gateways
 topology.gw.count=2
 # need generate link between gateways or not
-topology.gw.link.enabled=false
+topology.gw.link.enabled=true
 # stop benchmarks when cpe limit reached
 topology.cpe.count.max=2048
 # start benchmarks with this cpe count
