--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 # YEN, MPS, DISJOINT or NAIVE
 algorithm=YEN
+# a way of cost generation, equal or random
+topology.link.cost.generation=random
 # generate topology with no transit
 topology.no_transit=true
 # how much gateways
